{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 40,
  "lineage": "a4b771ad-18ec-962f-63c6-8139f431b336",
  "resources": [
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145023108247:network-acl/acl-037df1a5a4c0221f5",
            "default_network_acl_id": "acl-037df1a5a4c0221f5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-037df1a5a4c0221f5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "145023108247",
            "subnet_ids": [
              "subnet-097e00e12f8d20172",
              "subnet-0a382bc1cf2c927b7",
              "subnet-0b6e7cd2f9dec32dd"
            ],
            "tags": {
              "Name": "sales-default"
            },
            "tags_all": {
              "Name": "sales-default"
            },
            "vpc_id": "vpc-0e5b68ad591fed25e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145023108247:route-table/rtb-0dda7a1d5b47f1fcf",
            "default_route_table_id": "rtb-0dda7a1d5b47f1fcf",
            "id": "rtb-0dda7a1d5b47f1fcf",
            "owner_id": "145023108247",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sales-default"
            },
            "tags_all": {
              "Name": "sales-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e5b68ad591fed25e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145023108247:security-group/sg-08d361e9dd2a2b35e",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d361e9dd2a2b35e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all internal TCP and UDP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "145023108247",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sales-sg"
            },
            "tags_all": {
              "Name": "sales-sg"
            },
            "vpc_id": "vpc-0e5b68ad591fed25e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0611d002d6e31d3d9",
            "arn": "arn:aws:ec2:us-east-1:145023108247:elastic-ip/eipalloc-0611d002d6e31d3d9",
            "association_id": "eipassoc-05d3c1d1d50bc261e",
            "domain": "vpc",
            "id": "eipalloc-0611d002d6e31d3d9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06356f059d6da9104",
            "private_dns": "ip-10-4-18-167.ec2.internal",
            "private_ip": "10.4.18.167",
            "public_dns": "ec2-54-235-255-168.compute-1.amazonaws.com",
            "public_ip": "54.235.255.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sales-us-east-1a"
            },
            "tags_all": {
              "Name": "sales-us-east-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.data.aws_availability_zones.available",
            "module.aws-workspace-basic.module.vpc.aws_internet_gateway.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145023108247:internet-gateway/igw-07cbdb01e63ee20c2",
            "id": "igw-07cbdb01e63ee20c2",
            "owner_id": "145023108247",
            "tags": {
              "Name": "sales"
            },
            "tags_all": {
              "Name": "sales"
            },
            "vpc_id": "vpc-0e5b68ad591fed25e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0611d002d6e31d3d9",
            "association_id": "eipassoc-05d3c1d1d50bc261e",
            "connectivity_type": "public",
            "id": "nat-0e1d25d6f6393b9a7",
            "network_interface_id": "eni-06356f059d6da9104",
            "private_ip": "10.4.18.167",
            "public_ip": "54.235.255.168",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a382bc1cf2c927b7",
            "tags": {
              "Name": "sales-us-east-1a"
            },
            "tags_all": {
              "Name": "sales-us-east-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.data.aws_availability_zones.available",
            "module.aws-workspace-basic.module.vpc.aws_eip.nat",
            "module.aws-workspace-basic.module.vpc.aws_internet_gateway.this",
            "module.aws-workspace-basic.module.vpc.aws_subnet.public",
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-031adcb61a0a721031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e1d25d6f6393b9a7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-031adcb61a0a72103",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.data.aws_availability_zones.available",
            "module.aws-workspace-basic.module.vpc.aws_eip.nat",
            "module.aws-workspace-basic.module.vpc.aws_internet_gateway.this",
            "module.aws-workspace-basic.module.vpc.aws_nat_gateway.this",
            "module.aws-workspace-basic.module.vpc.aws_route_table.private",
            "module.aws-workspace-basic.module.vpc.aws_subnet.public",
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07cbdb01e63ee20c2",
            "id": "r-rtb-0dcd856ab2a19c3fc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dcd856ab2a19c3fc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.module.vpc.aws_internet_gateway.this",
            "module.aws-workspace-basic.module.vpc.aws_route_table.public",
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145023108247:route-table/rtb-031adcb61a0a72103",
            "id": "rtb-031adcb61a0a72103",
            "owner_id": "145023108247",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e1d25d6f6393b9a7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sales-private"
            },
            "tags_all": {
              "Name": "sales-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5b68ad591fed25e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.data.aws_availability_zones.available",
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145023108247:route-table/rtb-0dcd856ab2a19c3fc",
            "id": "rtb-0dcd856ab2a19c3fc",
            "owner_id": "145023108247",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07cbdb01e63ee20c2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sales-public"
            },
            "tags_all": {
              "Name": "sales-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5b68ad591fed25e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f71670e1f01e2c4",
            "route_table_id": "rtb-031adcb61a0a72103",
            "subnet_id": "subnet-097e00e12f8d20172"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.data.aws_availability_zones.available",
            "module.aws-workspace-basic.module.vpc.aws_route_table.private",
            "module.aws-workspace-basic.module.vpc.aws_subnet.private",
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0029ea121f8521679",
            "route_table_id": "rtb-031adcb61a0a72103",
            "subnet_id": "subnet-0b6e7cd2f9dec32dd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.data.aws_availability_zones.available",
            "module.aws-workspace-basic.module.vpc.aws_route_table.private",
            "module.aws-workspace-basic.module.vpc.aws_subnet.private",
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbee9788c4de2513",
            "route_table_id": "rtb-0dcd856ab2a19c3fc",
            "subnet_id": "subnet-0a382bc1cf2c927b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.data.aws_availability_zones.available",
            "module.aws-workspace-basic.module.vpc.aws_route_table.public",
            "module.aws-workspace-basic.module.vpc.aws_subnet.public",
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145023108247:subnet/subnet-097e00e12f8d20172",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.4.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097e00e12f8d20172",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145023108247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sales-private-us-east-1a"
            },
            "tags_all": {
              "Name": "sales-private-us-east-1a"
            },
            "vpc_id": "vpc-0e5b68ad591fed25e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.data.aws_availability_zones.available",
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145023108247:subnet/subnet-0b6e7cd2f9dec32dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.4.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6e7cd2f9dec32dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145023108247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sales-private-us-east-1b"
            },
            "tags_all": {
              "Name": "sales-private-us-east-1b"
            },
            "vpc_id": "vpc-0e5b68ad591fed25e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.data.aws_availability_zones.available",
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145023108247:subnet/subnet-0a382bc1cf2c927b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.4.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a382bc1cf2c927b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145023108247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sales-public-us-east-1a"
            },
            "tags_all": {
              "Name": "sales-public-us-east-1a"
            },
            "vpc_id": "vpc-0e5b68ad591fed25e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.data.aws_availability_zones.available",
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws-workspace-basic.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145023108247:vpc/vpc-0e5b68ad591fed25e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-037df1a5a4c0221f5",
            "default_route_table_id": "rtb-0dda7a1d5b47f1fcf",
            "default_security_group_id": "sg-08d361e9dd2a2b35e",
            "dhcp_options_id": "dopt-0c7c6d123022aaf71",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e5b68ad591fed25e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dda7a1d5b47f1fcf",
            "owner_id": "145023108247",
            "tags": {
              "Name": "sales"
            },
            "tags_all": {
              "Name": "sales"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.random_string.naming"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws-workspace-basic.module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws-workspace-basic.module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kinesis-streams",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145023108247:vpc-endpoint/vpce-04f7d4c0807592123",
            "dns_entry": [
              {
                "dns_name": "vpce-04f7d4c0807592123-1qxl2uru.kinesis.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04f7d4c0807592123-1qxl2uru-us-east-1a.kinesis.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04f7d4c0807592123-1qxl2uru-us-east-1b.kinesis.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kinesis.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00453372C60YJJN6ZJRP"
              },
              {
                "dns_name": "data-kinesis.us-east-1.api.aws",
                "hosted_zone_id": "Z0036560APJZXPKO6K6B"
              },
              {
                "dns_name": "*.data-kinesis.us-east-1.api.aws",
                "hosted_zone_id": "Z0036560APJZXPKO6K6B"
              },
              {
                "dns_name": "control-kinesis.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0926742O1CNUC6ZG7VZ"
              },
              {
                "dns_name": "*.control-kinesis.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0926742O1CNUC6ZG7VZ"
              },
              {
                "dns_name": "kinesis.us-east-1.api.aws",
                "hosted_zone_id": "Z09267412DKP7ZQ4W7T0J"
              },
              {
                "dns_name": "control-kinesis.us-east-1.api.aws",
                "hosted_zone_id": "Z09285242BHJKNU2WE3GI"
              },
              {
                "dns_name": "*.control-kinesis.us-east-1.api.aws",
                "hosted_zone_id": "Z09285242BHJKNU2WE3GI"
              },
              {
                "dns_name": "data-kinesis.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0919854OSA2XNBW6AZ4"
              },
              {
                "dns_name": "*.data-kinesis.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0919854OSA2XNBW6AZ4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04f7d4c0807592123",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05008b5e9a9eee87e",
              "eni-0522e10e4f70fb0b6"
            ],
            "owner_id": "145023108247",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08d361e9dd2a2b35e"
            ],
            "service_name": "com.amazonaws.us-east-1.kinesis-streams",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.4.62.200",
                "subnet_id": "subnet-097e00e12f8d20172"
              },
              {
                "ipv4": "10.4.95.61",
                "subnet_id": "subnet-0b6e7cd2f9dec32dd"
              }
            ],
            "subnet_ids": [
              "subnet-097e00e12f8d20172",
              "subnet-0b6e7cd2f9dec32dd"
            ],
            "tags": {
              "Name": "sales-kinesis-vpc-endpoint"
            },
            "tags_all": {
              "Name": "sales-kinesis-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e5b68ad591fed25e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.data.aws_availability_zones.available",
            "module.aws-workspace-basic.module.vpc.aws_route_table.private",
            "module.aws-workspace-basic.module.vpc.aws_route_table.public",
            "module.aws-workspace-basic.module.vpc.aws_subnet.private",
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.module.vpc_endpoints.aws_security_group.this",
            "module.aws-workspace-basic.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145023108247:vpc-endpoint/vpce-06164a180160ee871",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-06164a180160ee871",
            "owner_id": "145023108247",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-031adcb61a0a72103",
              "rtb-0dcd856ab2a19c3fc"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "sales-s3-vpc-endpoint"
            },
            "tags_all": {
              "Name": "sales-s3-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e5b68ad591fed25e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.data.aws_availability_zones.available",
            "module.aws-workspace-basic.module.vpc.aws_route_table.private",
            "module.aws-workspace-basic.module.vpc.aws_route_table.public",
            "module.aws-workspace-basic.module.vpc.aws_subnet.private",
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.module.vpc_endpoints.aws_security_group.this",
            "module.aws-workspace-basic.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145023108247:vpc-endpoint/vpce-0f427d81476ee3a5a",
            "dns_entry": [
              {
                "dns_name": "vpce-0f427d81476ee3a5a-yxrx1yux.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f427d81476ee3a5a-yxrx1yux-us-east-1a.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f427d81476ee3a5a-yxrx1yux-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09201123HLL70R0IY0G5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f427d81476ee3a5a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06c50f5bdfcde760e",
              "eni-0e12dc731f0108302"
            ],
            "owner_id": "145023108247",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08d361e9dd2a2b35e"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.4.59.159",
                "subnet_id": "subnet-097e00e12f8d20172"
              },
              {
                "ipv4": "10.4.89.24",
                "subnet_id": "subnet-0b6e7cd2f9dec32dd"
              }
            ],
            "subnet_ids": [
              "subnet-097e00e12f8d20172",
              "subnet-0b6e7cd2f9dec32dd"
            ],
            "tags": {
              "Name": "sales-sts-vpc-endpoint"
            },
            "tags_all": {
              "Name": "sales-sts-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e5b68ad591fed25e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws-workspace-basic.data.aws_availability_zones.available",
            "module.aws-workspace-basic.module.vpc.aws_route_table.private",
            "module.aws-workspace-basic.module.vpc.aws_route_table.public",
            "module.aws-workspace-basic.module.vpc.aws_subnet.private",
            "module.aws-workspace-basic.module.vpc.aws_vpc.this",
            "module.aws-workspace-basic.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws-workspace-basic.module.vpc_endpoints.aws_security_group.this",
            "module.aws-workspace-basic.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "module.aws-workspace-basic.random_string.naming"
          ]
        }
      ]
    }
  ]
}